--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server-core": "^3.6.1",
     "apollo-server-express": "^3.6.1",
     "aws-sdk": "^2.1055.0",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.2.0",
