--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-server-express": "^3.6.1",
     "aws-sdk": "^2.1055.0",
     "cors": "^2.8.5",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.2.0",
